--- a/index.html
+++ b/index.html
@@ -1,1 +1,146 @@
-html
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <!-- Metadatos -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Mejora la carga previa de las fuentes (performance) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Importa todos los pesos y estilos de la familia Poppins -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;...;1,900&display=swap"
+        rel="stylesheet">
+
+    <!-- Titulo y Icono -->
+    <title>Blog | Apple</title>
+    <link rel="icon" href="/assets/icons/apple-logo-white.png" type="image/png" />
+
+    <!-- Css -->
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/menus/header.css">
+    <link rel="stylesheet" href="/css/index/hero-principal.css">
+    <link rel="stylesheet" href="/css/index/information.css">
+    <link rel="stylesheet" href="/css/index/categorie.css">
+</head>
+
+<body>
+
+    <div class="container-general ">
+        <header class="header">
+            <nav class="nav">
+                <a href="/index.html">
+                    <img src="/assets/saarmyx/Saarmyx_Beige&Black_SFondo.png" alt="">
+                </a>
+                <a href="/index.html">
+                    <h3><span class="text-p"> Create by.</span> <span class="text-highlight">Saarmyx</span></h3>
+                </a>
+            </nav>
+        </header>
+
+        <section class="hero-principal">
+            <div class="hero-texto">
+                <h1>Todo sobre Apple</h1>
+                <a href="/src/blog-extend.html" class="btn-hero">Conoce mas</a>
+                <a href="https://www.apple.com/co/" class="btn-hero-o">Comprar algo</a>
+            </div>
+            <div class="hero-img">
+                <img src="/assets/page/index/airpods-3d.png" alt="">
+            </div>
+        </section>
+
+        <section class="information">
+            <div class="information-img">
+                <img src="/assets/page/index/iPhone-16.png" alt="">
+            </div>
+            <div class="information-texto">
+                <h2>Tecnología nueva</h2>
+                <p><span class="text-highlight-i">Apple Intelligence</span>, la nueva jugada de Cupertino: <span
+                        class="text-highlight-i">IA</span> integrada directamente
+                    en el sistema, con procesamiento en el dispositivo para proteger tu privacidad.
+                    <span class="text-highlight-i">Siri</span> ahora entiende el contexto, y las
+                    apps nativas se vuelven mucho más inteligentes.
+                    <span class="text-highlight-i">¿El giro?</span> Sin depender de la nube. Apple va en serio con la
+                    IA, pero a su estilo:
+                    Cerrada, segura y elegante.
+            </div>
+
+        </section>
+
+        <section class="categories">
+
+            <div class="categorie">
+                <div class="categorie-title">
+                    <h2>Explora por categoría</h2>
+                    <p>¡Sumérgete en lo último de la manzana mordida!</p>
+                </div>
+
+                <div class="categorie-box">
+
+                    <div class="box">
+                        <div class="box-img">
+                            <img src="/assets/page/index/iPhone-16.png" alt="">
+
+                        </div>
+                        <div class="box-text">
+                            <h1>Iphones y Accesorios</h1>
+                            <p>Artículos sobre lanzamientos, comparativas y trucos ocultos del ecosistema iPhone.
+                        </div>
+
+                    </div>
+
+                    <div class="box">
+                        <div class="box-img">
+                            <img src="/assets/page/index/macbook.png" alt="">
+
+                        </div>
+                        <div class="box-text">
+                            <h1>Mac y Macbooks</h1>
+                            <p>Todo lo que necesitas saber para elegir, optimizar o sobrevivir a macOS sin tirar la Mac
+                                por
+                                la ventana.
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="box-img">
+                            <img src="/assets/page/index/airpods-3d.png" alt="">
+
+                        </div>
+                        <div class="box-text">
+                            <h1>Iwatch y Airpods</h1>
+                            <p>Reviews, hacks y curiosidades sobre los wearables que te escuchan mejor que tu ex.
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <a href="/src/blog-extend.html"> <button class="btn-info-o"> Ver todas las publicaciones</button></a>
+            </div>
+        </section>
+
+
+        <section class="information">
+
+            <div class="information-texto">
+                <h2>¿Tienes dudas, ideas o alguna manzana que no muerde?</h2>
+                <p>Este no es un servicio técnico, ¡pero sí un espacio para compartir conocimiento!
+                    <br> Escríbenos si tienes sugerencias, quieres aportar un artículo o simplemente decir “hola”.
+                    <br> <a href="/src/contact.html"><button class="btn-information">Dejanos tus sugerencias</button>
+                    </a>
+                </p>
+            </div>
+            <div class="information-img-2">
+                <img src="/assets/icons/apple-logo-white.png" alt="">
+            </div>
+        </section>
+
+
+    </div>
+
+</body>
+
+</html>
